# prbuddy

./: .gitignore  README.md  compose.yaml
.devcontainer/: devcontainer.json
.devcontainer/configuration/: devcontainer.json
.devcontainer/llm_proxy/: devcontainer.json
configuration/: Dockerfile  pyproject.toml
configuration/app/: main.py
configuration/app/routers/: config.py
configuration/app/schemas/: config.py
configuration_db/: env-template
llm_proxy/: pyproject.toml
llm_proxy/app/: main.py
llm_proxy/app/llm/: llm.py
llm_proxy/app/routers/: review.py
llm_proxy/src/: main.py
ollama/: run.bash
pr_agent/: Dockerfile  main.py  pyproject.toml
