[tool.poetry]
name = "llm-proxy"
version = "0.1.0"
description = ""
authors = ["zkud <anton.kudyrka@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.17"
langchain-ollama = "^0.2.3"
langchain-core = "^0.3.33"
fastapi = {extras = ["standard"], version = "^0.115.8"}
uvicorn = {extras = ["standard"], version = "^0.34.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
